--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
  
        <div class="row">
           <div class="col-lg-3 col-sm-6">
-             <a href="https://gogocharters.com/56-passenger-charter-bus" class="outerBox">
+             <a href="#" class="outerBox">
                 <div class="innerbox">
                    <div class="boxHeader">
                       56 Passenger Charter
@@ -694,7 +694,7 @@
                    <div class="boxBody">
                       <div class="circleImg"></div>
                       <figure>
-                      <img loading="lazy" decoding="async" src="https://gogocharters.com/img_new_design/28_passenger_minibus.png" class="img-responsive lazy" alt="56 Passengers Charter Bus">
+                      <img loading="lazy" decoding="async" src="assets/images/thumbs/bus1.png" class="img-responsive lazy" alt="56 Passengers Charter Bus">
                       </figure>
                    </div>
                    <div class="boxFooter">
@@ -710,7 +710,7 @@
              </a>
           </div>
           <div class="col-lg-3 col-sm-6">
-             <a href="https://gogocharters.com/28-passenger-minibus" class="outerBox">
+             <a href="#" class="outerBox">
                 <div class="innerbox">
                    <div class="boxHeader">
                       28 Passenger Minibus
@@ -718,7 +718,7 @@
                    <div class="boxBody">
                       <div class="circleImg"></div>
                       <figure>
-                      <img loading="lazy" decoding="async" src="https://gogocharters.com/img_new_design/28_passenger_minibus.png" class="img-responsive lazy" alt="28 Passenger Minibus">
+                      <img loading="lazy" decoding="async" src="assets/images/thumbs/bus1.png" class="img-responsive lazy" alt="28 Passenger Minibus">
                       </figure>
                    </div>
                    <div class="boxFooter">
@@ -734,7 +734,7 @@
              </a>
           </div>
           <div class="col-lg-3 col-sm-6">
-             <a href="https://gogocharters.com/24-passenger-minibus" class="outerBox">
+             <a href="#" class="outerBox">
                 <div class="innerbox">
                    <div class="boxHeader">
                       24 Passenger Minibus
@@ -742,7 +742,7 @@
                    <div class="boxBody">
                       <div class="circleImg"></div>
                       <figure>
-                      <img loading="lazy" decoding="async" src="https://gogocharters.com/employee/upload/vehicle/153444932224.png" class="img-responsive lazy" alt="24 Passenger Minibus">
+                      <img loading="lazy" decoding="async" src="assets/images/thumbs/bus1.png" class="img-responsive lazy" alt="24 Passenger Minibus">
                       </figure>
                    </div>
                    <div class="boxFooter">
@@ -759,7 +759,7 @@
              </a>
           </div>
           <div class="col-lg-3 col-sm-6">
-             <a href="https://gogocharters.com/18-passenger-minibus" class="outerBox">
+             <a href="#" class="outerBox">
                 <div class="innerbox">
                    <div class="boxHeader">
                       18 Passenger Minibus
@@ -767,7 +767,7 @@
                    <div class="boxBody">
                       <div class="circleImg"></div>
                       <figure>
-                      <img loading="lazy" decoding="async" src="https://gogocharters.com/img_new_design/18_passenger_minibus.png" class="img-responsive lazy" alt="18 Passenger Minibus">
+                      <img loading="lazy" decoding="async" src="assets/images/thumbs/bus1.png" class="img-responsive lazy" alt="18 Passenger Minibus">
                       </figure>
                    </div>
                    <div class="boxFooter">
