set loation pages

--- a/location-details.html
+++ b/location-details.html
@@ -366,11 +366,11 @@
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="breadcrumb__wrapper">
-                    <h2 class="breadcrumb__title"> Service Details</h2>
+                    <h2 class="breadcrumb__title"> Location Details</h2>
                     <ul class="breadcrumb__list">
                         <li class="breadcrumb__item"><a href="index.html" class="breadcrumb__link"> <i class="las la-home"></i> Home</a> </li>
                         <li class="breadcrumb__item"><i class="fas fa-angle-right"></i></li>
-                        <li class="breadcrumb__item"> <span class="breadcrumb__item-text"> service Details </span> </li>
+                        <li class="breadcrumb__item"> <span class="breadcrumb__item-text"> Location Details </span> </li>
                     </ul>
                 </div>
             </div>
@@ -386,7 +386,7 @@
             <img src="assets/images/thumbs/project-details.png" alt="">
         </div>
         <div class="row gy-4">
-            <div class="col-lg-8">
+            <div class="col-lg-12">
                 <div class="project-details__content">
                     <h2 class="project-details__title">Where Innovation Meets Interior Design</h2>
                     <p class="project-details__desc font-18">Aliquam eros justo, posuere loborti viverra laoreet matti ullamcorper posuere viverra .Aliquam eros justo, posuere lobortis  viverra laoreet augue mattis fmentum ullamcorper viverra laoreet Aliquam eros justo, posuere lobor mattis fmentum ullam</p>
@@ -408,46 +408,39 @@
 
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div class="project-sidebar__box">
-                    <ul class="project-sidebar">
-                        <li class="project-sidebar__item">
-                            <span class="project-sidebar__text font-12">Client</span>
-                            <h6 class="project-sidebar__title font-16 fw-semibold mb-0">Sandi leo rakiul</h6>
-                        </li>
-                        <li class="project-sidebar__item">
-                            <span class="project-sidebar__text font-12">150000  USD</span>
-                            <h6 class="project-sidebar__title font-16 fw-semibold mb-0">consultation real estate </h6>
-                        </li>
-                        <li class="project-sidebar__item">
-                            <span class="project-sidebar__text font-12">Category</span>
-                            <h6 class="project-sidebar__title font-16 fw-semibold mb-0">Planing, Real Estate</h6>
-                        </li>
-                        <li class="project-sidebar__item">
-                            <span class="project-sidebar__text font-12">Date</span>
-                            <h6 class="project-sidebar__title font-16 fw-semibold mb-0">November 19, 2022</h6>
-                        </li>
-                    </ul>
-                    <ul class="social-share-list style-two mt-lg-5 mt-4">
-                        <li class="social-share-list__item">
-                            <a href="https://www.facebook.com" class="social-share-list__link"><i class="fab fa-facebook-f"></i></a>
-                        </li>
-                        <li class="social-share-list__item">
-                            <a href="https://www.twitter.com" class="social-share-list__link"><i class="fab fa-twitter"></i></a>
-                        </li>
-                        <li class="social-share-list__item">
-                            <a href="https://www.linkedin.com" class="social-share-list__link"><i class="fab fa-linkedin-in"></i></a>
-                        </li>
-                        <li class="social-share-list__item">
-                            <a href="https://www.pinterest.com" class="social-share-list__link"><i class="fab fa-instagram"></i></a>
-                        </li>
-                    </ul>
+        </div>
+    </div>
+</section>
+<!-- ======================= Project Details Section End =========================== -->
+
+<!-- ============================= About 2 Section Start =========================== -->
+<section class="about-three bg-white padding-y-120">
+    <div class="container container-two">
+        <div class="row gy-4">
+            <div class="col-lg-6">
+                <div class="about-content">
+                    <div class="section-heading style-left">
+                        <span class="section-heading__subtitle bg-gray-100"> <span class="text-gradient fw-semibold">About Us</span> </span>
+                        <h2 class="section-heading__title">Unlocking the door to your a the new home</h2>
+                        <p class="section-heading__desc font-18">Real estate is a lucrative industry that involves the buying selling and renting of properties. It encompasses residential commercial and industrial properties Real estate agents play a crucial role in facilitating real estate</p>
+                        <p class="section-heading__desc font-18">Real estate is a lucrative industry that involves the buying selling and renting of properties. It encompasses residential commercial and industrial properties Real estate agents play a crucial role in facilitating real estate</p>
+                    </div>
+                    <div class="about-button">
+                        <a href="#" class="btn btn-outline-main bg-white">Learn More <span class="icon-right"> <i class="fas fa-arrow-right"></i> </span> </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="about-three-thumb">
+                    <div class="about-three-thumb__inner">
+                        <img src="assets/images/thumbs/about-three-img.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!-- ======================= Project Details Section End =========================== -->
+<!-- ============================= About 2 Section End =========================== -->
 
     <!-- ==================== Latest Properties Four Start ========================= -->
     <section class="latest-properties-four padding-y-60 @@classes">
