--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
-    <title> CityScape Real Estate Html Template</title>
+    <title> A1Limobus | Html Template</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/logo/favicon.png">
 
@@ -184,7 +184,10 @@
         <a href="/" class="nav-menu__link">Home</a>
     </li>
     <li class="nav-menu__item has-submenu">
-        <a href="project-details.html" class="nav-menu__link">Service</a>
+        <a href="project-details.html" class="nav-menu__link">Service detail</a>
+    </li>
+    <li class="nav-menu__item has-submenu">
+        <a href="location-details.html" class="nav-menu__link">Location detail</a>
     </li>
     <li class="nav-menu__item has-submenu">
         <a href="contact.html" class="nav-menu__link">Contact Us</a>
@@ -326,14 +329,16 @@
         
     </li>
     <li class="nav-menu__item has-submenu">
-        <a href="project-details.html" class="nav-menu__link">Service</a>
-         
+        <a href="project-details.html" class="nav-menu__link">Service detail</a>
     </li>
     <li class="nav-menu__item has-submenu">
-        <a href="about.html" class="nav-menu__link">Contact Us</a>
+        <a href="location-details.html" class="nav-menu__link">Location detail</a>
+    </li>
+    <li class="nav-menu__item has-submenu">
+        <a href="contact.html" class="nav-menu__link">Contact Us</a>
     </li>
     <li class="nav-menu__item">
-        <a href="contact.html" class="nav-menu__link">About Us</a>
+        <a href="about.html" class="nav-menu__link">About Us</a>
     </li>
 </ul>
             </div>
